# program-researcher

./: .gitignore  AGENT.md  MODEL_CONFIGURATION.md  README.md  __init__.py  cli.py  config.py  conftest.py  graph.py  pyproject.toml  requirements.txt  run.py  state.py
docs/: LINEAR_WORKFLOW.md  pdf_vision_implementation.md  pdf_vision_vs_text_extraction.md  sources_documentation.md
examples/: research_csfp.py
nodes/: __init__.py  convert_json.py  extract_criteria.py  gather_links.py  generate_program_config.py  generate_tests.py  linear_ticket.py  qa_json.py  qa_research.py  qa_tests.py  read_screener_fields.py
output/: il_CSFP_ticket.md
prompts/: __init__.py  qa_agent.py  researcher.py
tests/: __init__.py  conftest.py  test_generate_tests.py  test_state.py
tools/: __init__.py  output_saver.py  pdf_vision.py  schema_validator.py  screener_fields.py  vision_helper.py  web_research.py
